--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,7 +10,14 @@ html(lang="en")
   body
     header 
       h1 Noom 
-    main 
+    main
+      div#myStream 
+        video#myFace(autoplay, playsinline, width="400", height="400")
+        button#mute Mute  
+        button#camera Camera turn off/on
+        select#cameras
+          option(value="device") Face Camera 
+
       div#welcome 
         form
           input(placeholder="room name", required, type="text")
