--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,12 +11,14 @@ html(lang="en")
     header 
       h1 Noom 
     main
-      div#myStream 
-        video#myFace(autoplay, playsinline, width="400", height="400")
-        button#mute Mute  
-        button#camera Camera turn off/on
-        select#cameras
-          option(value="device") Face Camera 
+      div#call
+        div#myStream 
+          video#myFace(autoplay, playsinline, width="400", height="400")
+          button#mute Mute  
+          button#camera Camera turn off/on
+          select#cameras
+            option(value="device") Face Camera 
+          video#peersFace(autoplay, playsinline, width="400", height="400")
 
       div#welcome 
         form
